css/styles.css
/* ... */
/**
 * Constrain images and videos to the parent width and preserve
 * their intrinsic aspect ratio.
 *
 * https://github.com/mozdevs/cssremedy/issues/14
 */

img,
video {
  max-width: 100%;
  height: auto;
}

/**
 * Ensure the default browser behavior of the `hidden` attribute.
 */

[hidden] {
  display: none;
}

*, ::before, ::after {
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-blur: var(--tw-empty,/*!*/ /*!*/);
  --tw-brightness: var(--tw-empty,/*!*/ /*!*/);
  --tw-contrast: var(--tw-empty,/*!*/ /*!*/);
  --tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
  --tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
  --tw-invert: var(--tw-empty,/*!*/ /*!*/);
  --tw-saturate: var(--tw-empty,/*!*/ /*!*/);
  --tw-sepia: var(--tw-empty,/*!*/ /*!*/);
  --tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
  --tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
}

.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.top-0 {
  top: 0px;
}

.right-0 {
  right: 0px;
}

.left-1 {
  left: 0.25rem;
}

.top-5 {
  top: 1.25rem;
}

.left-\[7\.5rem\] {
  left: 7.5rem;
}

.top-4 {
  top: 1rem;
}

.left-\[8\.5rem\] {
  left: 8.5rem;
}

.z-20 {
  z-index: 20;
}

.z-10 {
  z-index: 10;
}

.z-40 {
  z-index: 40;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.mx-5 {
  margin-left: 1.25rem;
  margin-right: 1.25rem;
}

.my-3 {
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
}

.mx-10 {
  margin-left: 2.5rem;
  margin-right: 2.5rem;
}

.mx-52 {
  margin-left: 13rem;
  margin-right: 13rem;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.inline {
  display: inline;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-screen {
  height: 100vh;
}

.h-14 {
  height: 3.5rem;
}

.h-\[3\.5rem\] {
  height: 3.5rem;
}

.h-5 {
  height: 1.25rem;
}

.h-7 {
  height: 1.75rem;
}

.h-\[0\.80rem\] {
  height: 0.80rem;
}

.h-\[20px\] {
  height: 20px;
}

.h-8 {
  height: 2rem;
}

.h-2 {
  height: 0.5rem;
}

.h-\[18px\] {
  height: 18px;
}

.h-\[22px\] {
  height: 22px;
}

.h-\[46\.49vw\] {
  height: 46.49vw;
}

.h-6 {
  height: 1.5rem;
}

.h-9 {
  height: 2.25rem;
}

.h-4 {
  height: 1rem;
}

.h-\[4\.5rem\] {
  height: 4.5rem;
}

.h-3 {
  height: 0.75rem;
}

.h-20 {
  height: 5rem;
}

.max-h-\[85vh\] {
  max-height: 85vh;
}

.min-h-\[4\.5rem\] {
  min-height: 4.5rem;
}

.w-screen {
  width: 100vw;
}

.w-14 {
  width: 3.5rem;
}

.w-5 {
  width: 1.25rem;
}

.w-\[3\.5rem\] {
  width: 3.5rem;
}

.w-\[20px\] {
  width: 20px;
}

.w-8 {
  width: 2rem;
}

.w-\[85vw\] {
  width: 85vw;
}

.w-\[100\%\] {
  width: 100%;
}

.w-\[18px\] {
  width: 18px;
}

.w-\[22px\] {
  width: 22px;
}

.w-\[90vw\] {
  width: 90vw;
}

.w-6 {
  width: 1.5rem;
}

.w-\[6rem\] {
  width: 6rem;
}

.w-\[1\.2rem\] {
  width: 1.2rem;
}

.w-\[100vw\] {
  width: 100vw;
}

.w-\[22rem\] {
  width: 22rem;
}

.w-7 {
  width: 1.75rem;
}

.w-4 {
  width: 1rem;
}

.w-3 {
  width: 0.75rem;
}

.w-full {
  width: 100%;
}

.w-\[63vw\] {
  width: 63vw;
}

.w-\[75\%\] {
  width: 75%;
}

.w-\[85\%\] {
  width: 85%;
}

.w-\[32\%\] {
  width: 32%;
}

.w-\[32vw\] {
  width: 32vw;
}

.w-\[32rem\] {
  width: 32rem;
}

.w-\[10rem\] {
  width: 10rem;
}

.w-\[20rem\] {
  width: 20rem;
}

.w-\[15rem\] {
  width: 15rem;
}

.w-\[12rem\] {
  width: 12rem;
}

.w-\[11rem\] {
  width: 11rem;
}

.w-\[10\.5rem\] {
  width: 10.5rem;
}

.w-\[10\.7rem\] {
  width: 10.7rem;
}

.w-\[10\.7vw\] {
  width: 10.7vw;
}

.w-\[10vw\] {
  width: 10vw;
}

.w-\[10\%\] {
  width: 10%;
}

.w-\[90\%\] {
  width: 90%;
}

.w-\[50\%\] {
  width: 50%;
}

.max-w-full {
  max-width: 100%;
}

.max-w-xs {
  max-width: 20rem;
}

.max-w-\[100\%\] {
  max-width: 100%;
}

.-translate-y-2\/4 {
  --tw-translate-y: -50%;
  transform: var(--tw-transform);
}

.rotate-\[140deg\] {
  --tw-rotate: 140deg;
  transform: var(--tw-transform);
}

.rotate-180 {
  --tw-rotate: 180deg;
  transform: var(--tw-transform);
}

.rotate-45 {
  --tw-rotate: 45deg;
  transform: var(--tw-transform);
}

.scale-0 {
  --tw-scale-x: 0;
  --tw-scale-y: 0;
  transform: var(--tw-transform);
}

.scale-150 {
  --tw-scale-x: 1.5;
  --tw-scale-y: 1.5;
  transform: var(--tw-transform);
}

.scale-125 {
  --tw-scale-x: 1.25;
  --tw-scale-y: 1.25;
  transform: var(--tw-transform);
}

.transform {
  transform: var(--tw-transform);
}

@-webkit-keyframes bounce {
  0%, 100% {
    transform: translateY(-25%);
    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
            animation-timing-function: cubic-bezier(0.8,0,1,1);
  }

  50% {
    transform: none;
    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
            animation-timing-function: cubic-bezier(0,0,0.2,1);
  }
}

@keyframes bounce {
  0%, 100% {
    transform: translateY(-25%);
    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
            animation-timing-function: cubic-bezier(0.8,0,1,1);
  }

  50% {
    transform: none;
    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
            animation-timing-function: cubic-bezier(0,0,0.2,1);
  }
}

.animate-bounce {
  -webkit-animation: bounce 1s infinite;
          animation: bounce 1s infinite;
}

@-webkit-keyframes pulse {
  50% {
    opacity: .5;
  }
}

@keyframes pulse {
  50% {
    opacity: .5;
  }
}
/* ... */

